--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
         <link rel="stylesheet" href="styles.css" />
 
+        <!-- Leaflet CSS file: -->
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+        integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+        crossorigin=""/>
+
         <title>Frontend Mentor | IP Address Tracker</title>
     </head>
     <body>
@@ -61,5 +66,10 @@
         </div>
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <script src="index.js"></script>
+
+        <!-- Leaflet JS file -->
+        <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+        crossorigin=""></script>
     </body>
 </html>
