--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
         <div class="attribution">
             Challenge by
             <a
-                href="https://www.frontendmentor.io?ref=challenge"
-                target="_blank"
-                >Frontend Mentor</a
-            >. Coded by <a href="#">Your Name Here</a>.
+            href="https://www.frontendmentor.io?ref=challenge"
+            target="_blank"
+            >Frontend Mentor</a
+            >. Coded by
+            <a href="https://github.com/bgregi" target="_blank">bgregi</a>.
         </div>
         
         <!-- Leaflet JS file -->
