--- a/index.html
+++ b/index.html
@@ -43,14 +43,17 @@
                     <h2>IP ADDRESS</h2>
                     <h3 id="ip"></h3>
                 </div>
+                <div class="divider"></div>
                 <div>
                     <h2>LOCATION</h2>
                     <h3 id="location"></h3>
                 </div>
+                <div class="divider"></div>
                 <div>
                     <h2>TIMEZONE</h2>
                     <h3 id="timezone"></h3>
                 </div>
+                <div class="divider"></div>
                 <div>
                     <h2>ISP</h2>
                     <h3 id="isp"></h3>
